modules/gdscript/tests/scripts/analyzer/errors/construct_abstract_script.notest.gd
@abstract class_name AbstractScript
